--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
 
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>واش كتبغيني؟</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Cairo', sans-serif; background: linear-gradient(135deg, #fff0f3 0%, #ffccd5 100%); display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; text-align: center; }
+        .container { background: rgba(255,255,255,0.9); padding: 30px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); width: 80%; max-width: 400px; }
+        h1 { color: #ff4d6d; }
+        .btn-group { display: flex; justify-content: center; gap: 15px; align-items: center; margin-top: 20px; }
+        #yesBtn { background: #2ecc71; color: white; padding: 10px 20px; border: none; border-radius: 20px; cursor: pointer; font-size: 1.2rem; transition: 0.3s; }
+        #noBtn { background: #ff4d6d; color: white; padding: 10px 20px; border: none; border-radius: 20px; cursor: pointer; }
+        img { border-radius: 15px; margin-bottom: 10px; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div id="q">
+            <img src="https://media.tenor.com/83p1y39w9mIAAAAj/mocha-bear-hearts.gif" width="150"><br>
+            <h1>واش كتبغيني؟</h1>
+            <div class="btn-group">
+                <button id="yesBtn">Yes</button>
+                <button id="noBtn">No</button>
+            </div>
+        </div>
+        <div id="s" style="display:none">
+            <img src="https://media.tenor.com/gUiu1zyxfzYAAAAi/bear-kiss-bear-kisses.gif" width="150">
+            <h1>حتى أنا كنبغيك! ❤️</h1>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+    <script>
+        let size = 1.2;
+        const noBtn = document.getElementById('noBtn');
+        const yesBtn = document.getElementById('yesBtn');
+        const noTexts = ["No", "واش بصح؟", "فكر مزيان!", "آخر فرصة!", "غادي تندم!"];
+        let count = 0;
+
+        noBtn.addEventListener('click', () => {
+            count++;
+            if(count < noTexts.length) noBtn.innerText = noTexts[count];
+            size += 0.5;
+            yesBtn.style.fontSize = size + "rem";
+            yesBtn.style.padding = (size * 10) + "px " + (size * 20) + "px";
+        });
+
+        yesBtn.addEventListener('click', () => {
+            document.getElementById('q').style.display = 'none';
+            document.getElementById('s').style.display = 'block';
+            confetti();
+        });
+    </script>
+</body>
+</html>
